feat: prepare for preview gen
